# Windows-MCP

./: .gitignore  CONTRIBUTING.md  EXECUTION_PREVIEW_IMPLEMENTATION.md  LICENSE  README.md  README_GUI.md  README_NAVIGATION.md  README_SCHEDULER.md  SCHEDULE_DIALOG_README.md  SPECS_MODIFICATION_SUMMARY.md  main.py  manifest.json  pyproject.toml  setup.cfg  simple_test.py  test_dialog_minimal.py  test_schedule_dialog.py  專案管理.md  開發文檔.md
.github/workflows/: ci.yml
docs/: USER_GUIDE.md
scripts/: quality_check.py
src/core/: __init__.py  action_sequence_executor.py  config_manager.py  error_handler.py  help_content_manager.py  interfaces.py  log_manager.py  mock_windows_controller.py  scheduler_engine.py  security_manager.py  system_context_provider.py  task_execution_coordinator.py  task_manager.py  window_state_manager.py  windows_controller.py
src/desktop/: __init__.py  config.py  views.py
src/gui/: __init__.py  main_window.py  navigation.py  page_manager.py  scheduler_app.py
src/models/: __init__.py  action.py  action_factory.py  action_step.py  config.py  data_models.py  enums.py  execution.py  (+7 more)
tests/: INTEGRATION_TEST_REPORT.md  PERFORMANCE_TEST_REPORT.md  README.md  TASK_15_2_COMPLETION_SUMMARY.md  run_performance_tests.py  test_action_validation.py  test_advanced_controls.py  test_app_monitoring.py  test_app_monitoring_manual.py  test_conditional_trigger.py  test_config_manager.py  test_environment.py  test_execution_preview_widget.py  test_global_error_handling.py  test_help_content_manager.py  test_help_content_storage.py  test_integration_comprehensive.py  test_integration_manual_gui.py  test_load_stress.py  test_log_manager.py  test_log_storage.py  test_logs_page_implementation.py  test_logs_page_minimal.py  test_logs_simple.py  test_logs_syntax.py  test_memory_leak_detection.py  test_models.py  test_overview_page.py  test_performance_stability.py  test_schedule_dialog_integration.py  test_scheduler_engine.py  test_security_validation.py  test_settings_page_widgets.py  test_settings_validation.py  test_simple_import.py  test_status_monitor_widget.py  test_task_manager.py  test_task_schedule.py  test_task_storage.py  test_window_operations.py  (+2 more)
(+44 files in other folders)
