[project]
name = "windows-mcp"
version = "0.1.0"
description = "Lightweight MCP Server for interacting with Windows Operating System."
readme = "README.md"
authors = [
    { name = "Jeomon George", email = "jeogeoalukka@gmail.com" }
]
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/Jeomon/Windows-MCP" }
keywords = ["windows", "mcp", "ai", "desktop","ai agent"]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.1",
    "humancursor>=1.1.5",
    "markdownify>=1.1.0",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "requests>=2.32.3",
    "uiautomation>=2.0.24",
]
