[project]
name = "windows-scheduler-gui"
version = "0.1.0"
description = "Windows應用程式排程控制GUI"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/CursorTouch" }
keywords = ["windows", "scheduler", "gui", "automation", "tkinter"]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "fuzzywuzzy>=0.18.0",
    "humancursor>=1.1.5",
    "ipykernel>=6.30.0",
    "live-inspect>=0.1.1",
    "markdownify>=1.1.0",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "uiautomation>=2.0.24",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]
